@@ -21,6 +21,10 @@ GNU coreutils NEWS                                    -*- outline -*-
   numbers, and up to 8 times slower for some worst-case individual numbers.
   [bug introduced in coreutils-7.0, with GNU MP support]
 
+  ls now correctly colors dangling symlinks when listing their containing
+  directories, with orphaned symlink coloring disabled in LS_COLORS.
+  [bug introduced in coreutils-8.14]
+
   rm -i -d now prompts the user then removes an empty directory, rather
   than ignoring the -d option and failing with an 'Is a directory' error.
   [bug introduced in coreutils-8.19, with the addition of --dir (-d)]
